update reset to calculate amount applied correctly, using the delta of the total premium

--- a/app/views/insured/group_selection/_change_tax_credit_form.html.erb
+++ b/app/views/insured/group_selection/_change_tax_credit_form.html.erb
@@ -138,7 +138,7 @@
         radioButtonNo.removeAttribute("checked");
         aptcAppliedTotal.value = aptcAppliedTotal.dataset.initialAmount;
         updateTaxCreditPercentage.value = updateTaxCreditPercentage.dataset.initialPercent;
-        calculatedAmountApplied.textContent = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(aptcAppliedTotal.dataset.initialAmount);
+        calculatedAmountApplied.textContent = new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(premiumTotal - aptcAppliedTotal.value);
         saveButton.disabled = true;
       }
 
