fetch more dry run values

--- a/app/views/exchanges/hbx_profiles/dry_run_dashboard.html.erb
+++ b/app/views/exchanges/hbx_profiles/dry_run_dashboard.html.erb
@@ -87,16 +87,16 @@
       </table>
 
       <h3>
-        <strong><%= l10n('dry_run_dashboard.enrollment_states') %></strong>
+        <strong><%= l10n('admin_actions.dry_run.enrollments.enrollment_states') %></strong>
       </h3>
       <table class="table table-striped">
         <thead>
           <tr>
-            <th><%= l10n('dry_run_dashboard.type') %></th>
-            <th><%= l10n('dry_run_dashboard.category') %></th>
-            <th><%= l10n('dry_run_dashboard.auto_renewing') %></th>
-            <th><%= l10n('dry_run_dashboard.coverage_selected') %></th>
-            <th><%= l10n('dry_run_dashboard.renewing_coverage_selected') %></th>
+            <th><%= l10n('admin_actions.dry_run.enrollments.type') %></th>
+            <th><%= l10n('admin_actions.dry_run.enrollments.category') %></th>
+            <th><%= l10n('admin_actions.dry_run.enrollments.auto_renewing') %></th>
+            <th><%= l10n('admin_actions.dry_run.enrollments.coverage_selected') %></th>
+            <th><%= l10n('admin_actions.dry_run.enrollments.renewing_coverage_selected') %></th>
           </tr>
         </thead>
         <tbody>
