refactor last alpha pagination to condense letters

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_staff.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/_staff.html.erb
@@ -8,7 +8,7 @@
       <%= render 'benefit_sponsors/profiles/broker_agencies/broker_agency_profiles/staff_table'%>
     </table>
     <div>
-      <%= render 'benefit_sponsors/shared/profiles/broker_agency/alph_paginate_remote', url: benefit_sponsors.staff_index_profiles_broker_agencies_broker_agency_profiles_path(bs4: @bs4), alphs: @page_alphabets %>
+      <%= render 'benefit_sponsors/shared/profiles/broker_agency/alph_paginate_remote', url: benefit_sponsors.staff_index_profiles_broker_agencies_broker_agency_profiles_path(bs4: @bs4), alphs: @page_alphabets, alph_labels: @alph_labels %>
     </div>
   </div>
    <div id='help_index_status'></div>
