--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/profiles/broker_agency/_alph_paginate_remote.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/profiles/broker_agency/_alph_paginate_remote.html.erb
@@ -1,24 +1,27 @@
+
 <% all ||= nil %>
+<% alph_labels ||= nil %>
 <% remote = remote.blank? ? false : remote %>
 <% status ||= nil %>
 <% url_params ||= {} %>
+<% url_params[:status] = status if status.present? %>
+<% url_param_string = url_params.inject([]){|arr, (k,v)| arr << "#{k}=#{v}"}.join("&") if !url_params.empty? %>
 <% if @bs4 %>
-  <% url += "&" + url_params.inject([]){|arr, (k,v)| arr << "#{k}=#{v}"}.join("&") if !url_params.empty? %>
-  <% url += "&status=#{status}" if status %>
-  <% current_page = params[:page] || alphs.first %>
+  <% url += "&" + url_param_string if url_param_string.present? %>
+  <% current_page = current_page(params[:page], alphs) %>
   <nav aria-label="broker navigation by last name">
     <ul class="pagination justify-content-center">
       <% prev_alph = previous_page(alphs, current_page) %>
       <li class="page-item <%= 'disabled' if current_page == alphs.first %>"><%= h(link_to l10n("previous"), (prev_alph.present? ? url + "&page=#{prev_alph}" : "#"), remote: true, class: 'page-link') %></li>
       <% if all %>
         <% all_url = all %>
-        <% all_url += "&" + url_params.inject([]){|arr, (k,v)| arr << "#{k}=#{v}"}.join("&") if !url_params.empty? %>
+        <% all_url += "&" + url_param_string if url_param_string.present? %>
         <li class="page-item"><%= h(link_to l10n("all"), all_url, remote: true, class:"page-link") %></li>
       <% end %>
       <% alphs.each_with_index do |alph, index| %>
         <% alph_url = url + "&page=#{alph}" %>
-        <% active = params[:page] ? alph == params[:page] : index == 0 %>
-        <li class="page-item <%= 'active' if active %>"><%= h(link_to alph, (alph_url), remote: true, class: 'page-link') %></li>
+        <% alph_label = alph_labels.present? ? alph_labels[index] : alph %>
+        <li class="page-item <%= 'active' if alph == current_page %>"><%= h(link_to alph_label, (alph_url), remote: true, class: 'page-link') %></li>
       <% end %>
       <% next_alph = next_page(alphs, current_page) %>
       <li class="page-item <%= 'disabled' if current_page == alphs.last %>"><%= h(link_to l10n("next"), (next_alph.present? ? url + "&page=#{next_alph}" : "#"), remote: true, class: 'page-link') %></li>
