switch onblur to oninput so modal doesn't show if date hasn't changed

--- a/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
@@ -34,7 +34,7 @@
       min: 110.years.ago,
       max: 16.years.ago.beginning_of_month,
       required: true,
-      onblur: 'validDob(this)'
+      oninput: 'validDob(this)'
     %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
