--- a/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_personal_information.html.erb
@@ -33,8 +33,10 @@
       placeholder: l10n('dob_format'),
       min: 110.years.ago,
       max: 16.years.ago.beginning_of_month,
+      data: {input: "", invalid_dob_title: l10n('broker_agencies.invalid_dob_title'), invalid_dob_body: l10n('broker_agencies.invalid_dob_body'), invalid_dob_after: l10n("broker_agencies.invalid_dob_after", date: 16.years.ago.beginning_of_month.strftime('%m/%d/%Y')), invalid_dob_before: l10n("broker_agencies.invalid_dob_before", date: 110.years.ago.strftime('%m/%d/%Y'))},
       required: true,
-      oninput: 'validDob(this)'
+      onblur: 'validDob(this)',
+      onkeydown: 'storeDateInput(event)'
     %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
