--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_broker_registration_form.html.erb
@@ -52,29 +52,37 @@
       }
     });
 
+    // the value of the date input is always empty if the user doesn't input a valid date
+    // to check that if the user was just tabbing through the form, we store the input in a dataset
+    // to check if the user partially inputted an invalid date as the actual user input is only in the
+    // shadow DOM
+    function storeDateInput(event) {
+      var input = event.target;
+      if (event.key !== "Tab") {
+        input.dataset.input += event.key;
+      }
+    }
+
     function validDob(element) {
+      event.preventDefault();
       let dob = element.value;
-      let warningTitle;
+      let input = element.dataset.input;
+      let warningTitle = element.dataset.invalidDobTitle;
       let warningText;
 
-      if (!dob || dob.length < 10 || isNaN(Date.parse(dob))) {
-        warningTitle = "Invalid DOB Format";
-        warningText = "DOB must be entered as MM/DD/YYYY";
+      if ((dob || input.length > 0) && (dob.length < 10 || isNaN(Date.parse(dob)))) {
+        warningText = element.dataset.invalidDobBody;
       } else if (Date.parse(dob) > Date.parse(element.max)) {
-        let max = element.max;
-        warningTitle = "Invalid DOB";
-        warningText = `DOB cannot be after ${max.substr(5, 2)}/${max.substr(8, 2)}/${max.substr(0, 4)}`;
+        warningText = element.dataset.invalidDobAfter;
       } else if (Date.parse(dob) < Date.parse(element.min)) {
-        let min = element.min;
-        warningTitle = "Invalid DOB";
-        warningText = `DOB cannot be before ${min.substr(5, 2)}/${min.substr(8, 2)}/${min.substr(0, 4)}`;
+        warningText = element.dataset.invalidDobBefore;
       }
 
       showDobErrorMessage(element, warningTitle, warningText);
     }
 
     function showDobErrorMessage(element, warningTitle, warningText) {
-      if (!warningTitle || !warningText) return;
+      if (!warningText) return;
 
       swal({
         title: warningTitle,
@@ -82,6 +90,7 @@
         icon: 'warning'
       });
       element.value = '';
+      element.dataset.input = "";
     }
   </script>
 <% else %>
