fix submit handling for edit form

--- a/components/financial_assistance/app/views/financial_assistance/applicants/_edit.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_edit.html.erb
@@ -139,7 +139,7 @@
       <%= f.button(id: 'confirm-member', class: "btn btn-primary hidden") do %>
         <%= l10n("confirm_member") %>
       <% end %>
-      <span tabindex="0" onkeydown="handleButtonKeyDown(event, 'confirm_member')" id="confirm_member" class="btn btn-primary" onclick='PersonValidations.manageRequiredValidations($(this));'>
+      <span tabindex="0" onkeydown="handleButtonKeyDown(event, 'confirm_member')" id="confirm_member" class="btn btn-primary">
         <%= l10n("confirm_member") %>
       </span>
     </div>
@@ -202,9 +202,10 @@
       });
     }
 
-    $(document).off('click', '#confirm-member');
-    $(document).on('click', '#confirm-member', function(e) {
-      if ($("input#applicant_same_with_primary")) {
+    $(document).off('click', '#confirm_member');
+    $(document).on('click', '#confirm_member', function(e) {
+      console.log('clicked');
+      if ($("input#applicant_same_with_primary").length) {
         if($("input#applicant_same_with_primary").is(":checked")){
           $("#applicant-home-address-area input.required, #applicant-home-address-area select.required, #applicant-home-address-area .address_required").removeAttr('required');
         } else {
@@ -218,8 +219,10 @@
           $('#addressChangeConfirmation').modal('show');
         }
         else {
-          PersonValidations.manageRequiredValidations($('#confirm-dependent'));
+          PersonValidations.manageRequiredValidations($('#confirm_member'));
         }
+      } else {
+        PersonValidations.manageRequiredValidations($('#confirm_member'));
       }
     });
   </script>
