disable and blur confirm on submit, remove modal from edit

--- a/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
@@ -183,7 +183,11 @@
            $('#addressChangeConfirmation').modal('show');
         }
         else {
+          $(this).addClass("disabled").attr('tabindex', -1).blur();
           PersonValidations.manageRequiredValidations($('#confirm-dependent'));
+          if (!$(this).closest('form')[0].checkValidity()) {
+            $(this).removeClass("disabled");
+          }
         }
 
       });
