--- a/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
@@ -1,4 +1,5 @@
 <% if @bs4 %>
+  <h1>dep form</h1>
   <% dependent = @applicant %>
   <div id="<%= employee_dependent_form_id(dependent) %>" class="dependent_list py-5">
     <% is_editing = dependent.id.present? %>
@@ -186,7 +187,7 @@
           $(this).addClass("disabled").attr('tabindex', -1).blur();
           PersonValidations.manageRequiredValidations($('#confirm-dependent'));
           if (!$(this).closest('form')[0].checkValidity()) {
-            $(this).removeClass("disabled");
+            $(this).removeClass("disabled").attr('tabindex', 0);
           }
         }
 
