plan tile headers should have an underline during hover

--- a/app/javascript/css/enrollment.scss
+++ b/app/javascript/css/enrollment.scss
@@ -237,5 +237,8 @@
     line-height: 1.5;
     display: block;
     text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
